--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -5,3 +5,9 @@ input {
 mat-spinner {
   margin: auto;
 }
+.mat-card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
