--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,18 +1,19 @@
-<mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened>
-    <mat-nav-list>
-      <a mat-list-item routerLink="'/accounts'">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">
-          Home
-        </mat-icon>
-        Main Page
-      </a>
-      <a mat-list-item routerLink="'/create-account'"> Sites </a>
-      <a mat-list-item routerLink="'/contacts'"> Zones </a>
-      <a mat-list-item routerLink="'/create-contact'"> History </a>
-      <a mat-list-item routerLink="'/activities'"> Activities </a>
-      <a mat-list-item routerLink="'/create-activity'"> Create Activity </a>
-    </mat-nav-list>
-  </mat-drawer>
-  <mat-drawer-content>Main content</mat-drawer-content>
-</mat-drawer-container>
+<div class="sidebar">
+  <a class="active"><i class="fa fa-fw fa-home"></i>Home</a>
+
+  <a [matMenuTriggerFor]="Sites"> <i class="fa fa-globe"></i>Sites </a>
+  <mat-menu #Sites="matMenu">
+    <a mat-menu-item routerLink="create-site">Add site</a>
+    <a mat-menu-item routerLink="list-sites">My Sites</a>
+  </mat-menu>
+
+  <a [matMenuTriggerFor]="Zones"> <i class="fa fa-anchor"></i>Zones </a>
+  <mat-menu #Zones="matMenu">
+    <a mat-menu-item routerLink="">add Zone</a>
+    <a mat-menu-item>My Zones</a>
+  </mat-menu>
+</div>
+
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
