--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
 
   <a [matMenuTriggerFor]="Zones"> <i class="fa fa-anchor"></i>Zones </a>
   <mat-menu #Zones="matMenu">
-    <a mat-menu-item routerLink="">add Zone</a>
+    <a mat-menu-item routerLink="create-zone">add Zone</a>
     <a mat-menu-item>My Zones</a>
   </mat-menu>
 </div>
