Create and list zone,Create sensor,forgot password

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,6 +32,9 @@
         >Please provide a valid password</mat-error
       >
     </mat-form-field>
+    <a href="#" (click)="onForgotPassword(loginForm, $event)"
+      >Forgot Password?</a
+    >
     <button mat-raised-button color="accent" type="submit">login</button>
   </form>
 </mat-card>
