--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -25,6 +25,10 @@ body {
   color: white;
 }
 
+.sidebar a:active {
+  color: red;
+}
+
 .sidebar a:hover:not(.active) {
   background-color: #555;
   color: white;
