--- a/src/app/zones/zone-create/zone-create.component.html
+++ b/src/app/zones/zone-create/zone-create.component.html
@@ -12,7 +12,7 @@
       <mat-label>Enter the name of the zone</mat-label>
       <input matInput formControlName="name" type="text" />
       <mat-error *ngIf="form.get('name')!.invalid"
-        >Please provide a valid name for the site</mat-error
+        >Please provide a valid name for the zone</mat-error
       >
     </mat-form-field>
 
