--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -11,3 +11,12 @@ mat-spinner {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+a {
+  text-decoration: none;
+  color: gray;
+  position: relative;
+  left: 70%;
+}
+a:hover {
+  color: green;
+}
