--- a/src/app/sites/sites-list/site-list.component.html
+++ b/src/app/sites/sites-list/site-list.component.html
@@ -6,7 +6,10 @@
     </mat-expansion-panel-header>
     <p>{{ site.description }}</p>
     <mat-action-row>
-      <a mat-button color="primary" [routerLink]="['/dashboard/edit', site.id]"
+      <a
+        mat-button
+        color="primary"
+        [routerLink]="['/dashboard/edit-site', site.id]"
         >EDIT</a
       >
       <button mat-button color="warn" (click)="onDelete(site.id)">
