--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,18 +1,11 @@
+<app-header></app-header>
 <mat-card class="mat-card">
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <form (submit)="onLogin(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
     <h1 style="text-align: center">Login</h1>
     <mat-form-field>
       <mat-label>Enter your email</mat-label>
-      <input
-        matInput
-        name="email"
-        ngModel
-        type="email"
-        #emailInput="ngModel"
-        required
-        email
-      />
+      <input matInput name="email" ngModel type="email" #emailInput="ngModel" required email />
       <mat-error *ngIf="emailInput.invalid">
         Please provide a valid email
       </mat-error>
@@ -20,21 +13,12 @@
 
     <mat-form-field>
       <mat-label>Enter your Password</mat-label>
-      <input
-        type="password"
-        name="password"
-        ngModel
-        #passwordInput="ngModel"
-        matInput
-        required
-      />
-      <mat-error *ngIf="passwordInput.invalid"
-        >Please provide a valid password</mat-error
-      >
+      <input type="password" name="password" ngModel #passwordInput="ngModel" matInput required />
+      <mat-error *ngIf="passwordInput.invalid">Please provide a valid password</mat-error>
     </mat-form-field>
-    <a href="#" (click)="onForgotPassword(loginForm, $event)"
-      >Forgot Password?</a
-    >
+    <div>
+      <a href="#" (click)="onForgotPassword(loginForm, $event)">Forgot Password?</a>
+    </div>
     <br />
     <button mat-raised-button color="accent" type="submit">login</button>
   </form>
