--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,62 +1,55 @@
 body {
-  margin: 0;
   font-family: "Lato", sans-serif;
 }
 
-.sidebar {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  position: fixed;
+.sidenav {
   height: 100%;
-  overflow: auto;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
-.sidebar a {
-  display: block;
-  color: black;
-  padding: 16px;
+.sidenav a {
+  padding: 8px 8px 8px 32px;
   text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 1s;
 }
 
-.sidebar a.active {
-  background-color: #04aa6d;
-  color: white;
+.sidenav a:hover {
+  color: #f1f1f1;
 }
 
-.sidebar a:active {
-  color: red;
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
-.sidebar a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+#main {
+  transition: margin-left 0.5s;
 }
 
-div.content {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 1000px;
-}
-
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
   }
-  .sidebar a {
-    float: left;
-  }
-  div.content {
-    margin-left: 0;
+  .sidenav a {
+    font-size: 18px;
   }
 }
-
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
+.sidenav a {
+  display: grid;
+  grid-template-columns: 20px 20px;
+  gap: 10px;
 }
