--- a/src/app/sites/sites-list/site-list.component.html
+++ b/src/app/sites/sites-list/site-list.component.html
@@ -6,25 +6,15 @@
     </mat-expansion-panel-header>
     <p>{{ site.description }}</p>
     <mat-action-row>
-      <a
-        mat-button
-        color="primary"
-        [routerLink]="['/dashboard/edit-site', site.id]"
-        >EDIT</a
-      >
+      <a mat-button color="primary" [routerLink]="['/dashboard/edit-site', site.id]">EDIT</a>
       <button mat-button color="warn" (click)="onDelete(site.id)">
         DELETE
       </button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<mat-paginator
-  [length]="totalSites"
-  [pageSize]="sitesPerPage"
-  [pageSizeOptions]="pageSizeOptions"
-  (page)="onChangedPage($event)"
-  *ngIf="sites.length > 0"
-></mat-paginator>
+<mat-paginator [length]="totalSites" [pageSize]="sitesPerPage" [pageSizeOptions]="pageSizeOptions"
+  (page)="onChangedPage($event)" *ngIf="sites.length > 0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf="sites.length <= 0 && !isLoading">
   No sites added yet!
 </p>
